--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 01:49:00 AM</p>
+    <p class="lastupdate">09/16/2020 01:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">53.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">53.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">53.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">38.9&#176;F</td>
+        <td class="data">39.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">59%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.022 inHg (0.002)</td>
+        <td class="data">30.020 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             56.8</span><br/>
-          <span title="01:47:32 AM">
-            53.3</span>
+          <span title="01:52:40 AM">
+            53.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:47:32 AM" class="loval">
-            53.3</span>
+          <span title="01:52:40 AM" class="loval">
+            53.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          270
+          267
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 11 hours, 2 minutes</td>
+      <td class="data">14 days, 11 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 11 hours, 2 minutes</td>
+      <td class="data">14 days, 11 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
