--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:44:00 AM</p>
+    <p class="lastupdate">09/16/2020 02:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">37.8&#176;F</td>
+        <td class="data">38.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">60%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.011 inHg (-0.017)</td>
+        <td class="data">30.010 inHg (-0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.0&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:45:00 AM">
             30.029</span><br/>
-          <span title="02:39:00 AM">
-            30.009</span>
+          <span title="02:45:00 AM">
+            30.008</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          263
+          262
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             76.5</span><br/>
-          <span title="02:40:00 AM">
-            75.0</span>
+          <span title="02:48:00 AM">
+            74.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 11 hours, 57 minutes</td>
+      <td class="data">14 days, 12 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 11 hours, 57 minutes</td>
+      <td class="data">14 days, 12 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
