--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 03:39:00 AM</p>
+    <p class="lastupdate">09/16/2020 03:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">50.2&#176;F</td>
+        <td class="data">50.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.1&#176;F</td>
+        <td class="data">39.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">68%</td>
+        <td class="data">67%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.006 inHg (-0.018)</td>
+        <td class="data">30.004 inHg (-0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:04 AM">
             76.5</span><br/>
-          <span title="03:28:00 AM">
-            74.5</span>
+          <span title="03:40:00 AM">
+            74.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:32:02 PM (Tuesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 12 hours, 52 minutes</td>
+      <td class="data">14 days, 12 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 12 hours, 52 minutes</td>
+      <td class="data">14 days, 12 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
